--- a/AmandaViagens/AmandaViagens/appsettings.json
+++ b/AmandaViagens/AmandaViagens/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*", 
+  "ConnectionStrings": {
+  "AmandaViagensConn" : "server=localhost;port=3306;database=amandaviagensdb;uid=root;pwd=''"
+  }
 }
